se puso mas codigo para probar xd

--- a/index.html
+++ b/index.html
@@ -371,6 +371,24 @@
                         </a>
                     </div>
                 </div>
+                <div class="documento-card" data-mes="marzo" data-anio="2025">
+                    <div class="documento-icon">
+                        <i class="fas fa-file-pdf"></i>
+                    </div>
+                    <div class="documento-info">
+                        <h4>I Domingo de Cuaresma 2</h4>
+                        <p>Fecha: 20 de marzo, 2025</p>
+                        <p class="documento-descripcion">Lecturas y reflexiones para el primer domingo de Cuaresma 2.</p>
+                    </div>
+                    <div class="documento-acciones">
+                        <a href="documentos/Laboratorio N° 5.pdf" target="_blank" class="btn-ver">
+                            <i class="fas fa-eye"></i> Ver
+                        </a>
+                        <a href="documentos/Laboratorio N° 5.pdf" download class="btn-descargar">
+                            <i class="fas fa-download"></i> Descargar
+                        </a>
+                    </div>
+                </div>
                 
             
             <div class="paginacion">
